<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/movieDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_details"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_id"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movieDetails"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/movieIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/movieId"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movieIdLabel"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/movieTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_description"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleLabel"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/movieDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/movieDescription"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_director"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionLabel"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/movieDirectorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/movieActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_actors_show"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDirectorLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieActorsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieActors"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>